--- a/public/old/pretest.html
+++ b/public/old/pretest.html
@@ -4,12 +4,11 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Ganti Password Anda</title>
+		<title>Title Page</title>
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<!-- 		<link rel="stylesheet" href="chpass.css" > -->
-		<link rel="stylesheet" type="text/css" href="este.css">
+		<link rel="stylesheet" href="chpass.css" >
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
@@ -21,19 +20,19 @@
 		<div class="text-center" style="margin-top: 150px">
 		<img class="center" src="image/alert.png" width="10%">
 		</div>
-		<h1 class="text-center" style="color: #343C47; font-weight: bold;">GANTI KATA SANDI ANDA
-		<br><small style="color: #343C47;">(Untuk pertama kali silahkan ganti kata sandi akun ada)</small></h1>
-   <div class="container">
-        <div class="card2 card-container">
+		<h1 class="text-center" style="color: #343C47; font-weight: bold;">MASUKKAN KODE TEST
+		<br><small style="color: #343C47;">(Kode test ujian diberikan oleh pengawas ujian)</small></h1>
+
+		<div class="container">
+        <div class="card card-container">
             <form class="form-signin">
                 <span id="reauth-email" class="reauth-email"></span>
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password Lama" required>
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password Baru" required>
-                <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">GANTI</button>
+                <input type="password" id="inputPassword" class="form-control" placeholder="Kode Test" required>
+                <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">MULAI</button>
             </form><!-- /form -->
-            <div class="text-center" style="font-weight: bold;"><a href="_blank">LEWATI</a></div>
         </div><!-- /card-container -->
     </div><!-- /container -->
+
 		<!-- jQuery -->
 		<script src="//code.jquery.com/jquery.js"></script>
 		<!-- Bootstrap JavaScript -->
