--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<![endif]-->
 </head>
 <body>
-	<h1 class="text-center">Hello World</h1>
+	<h1 class="text-center">Electronic School Test<br/>is Coming Soon</h1>
 
 	<!-- jQuery -->
 	<script src="https://code.jquery.com/jquery.js"></script>
